--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,43 +1,73 @@
 {
     "cSpell.words": [
+        "altura",
         "asignamos",
+        "asignando",
         "Atletico",
+        "atributos",
+        "automatica",
         "cadena",
         "campeonato",
         "capturado",
+        "Carnivoro",
+        "Carnivoros",
         "claves",
+        "comiendo",
         "comportamiento",
         "crear",
+        "detecta",
         "diccionarios",
         "directo",
+        "Dogo",
+        "edad",
         "elemento",
         "encuentra",
         "equipo",
+        "escarnivoro",
+        "eshombre",
         "España",
         "esta",
+        "estoy",
         "existe",
+        "genero",
         "Getafe",
+        "hacerlo",
+        "humano",
+        "Humanos",
         "imprimo",
         "incorrecta",
         "Independiente",
         "Ingrese",
         "Japon",
         "mapa",
+        "metodos",
         "muestra",
+        "mujer",
+        "Mujer",
         "número",
         "números",
         "opcion",
         "Opcion",
         "opción",
         "orden",
+        "otra",
         "otras",
         "otros",
         "pais",
         "paises",
         "palin",
+        "parezca",
+        "pensando",
+        "pensar",
+        "perro",
         "puntaje",
+        "respirando",
+        "Respirando",
+        "respirar",
+        "Respirar",
         "Resta",
         "saliendo",
+        "sexo",
         "Suma",
         "texto",
         "tiene",
